--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -17,9 +19,13 @@
     ]
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "precommit": "lint-staged",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
