--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "precommit": "lint-staged",
-    "build-css": "node-sass-chokidar --include-path src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
