--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "apollo-boost": "^0.1.14",
     "apollo-link-context": "^1.0.8",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",    "husky": "^0.14.3",
+    "graphql-tag": "^2.9.2",
+    "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
-	"react-apollo": "^2.1.11",
-    "subscriptions-transport-ws": "^0.9.14",    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-apollo": "^2.1.11",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.2",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
+    "react-scripts": "1.1.4",
+    "subscriptions-transport-ws": "^0.9.14"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
@@ -23,14 +28,14 @@
     ]
   },
   "scripts": {
-    "start-js": "react-scripts start",
+    "start-js": "react-app-rewired start",
     "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
+    "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
     "precommit": "lint-staged",
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   }
 }
