--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "graphql-tag": "^2.9.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2",
@@ -19,7 +20,8 @@
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
     "react-scripts": "1.1.4",
-    "subscriptions-transport-ws": "^0.9.14"
+    "subscriptions-transport-ws": "^0.9.14",
+    "winston": "^3.0.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
