--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-qr-reader": "^2.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "subscriptions-transport-ws": "^0.9.14",
