--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-qr-reader": "^2.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "styled-components": "^3.4.5",
     "subscriptions-transport-ws": "^0.9.14",
     "winston": "^3.0.0"
   },
