--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-loader": "^4.3.4",
     "react-qr-reader": "^2.1.0",
     "react-router-dom": "^4.3.1",
+    "react-router-page-transition": "^3.1.0",
     "react-scripts": "1.1.4",
     "styled-components": "^3.4.5",
     "subscriptions-transport-ws": "^0.9.14",
