--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-page-transition": "^3.1.0",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^1.2.1",
     "styled-components": "^3.4.5",
     "subscriptions-transport-ws": "^0.9.14",
     "winston": "^3.0.0"
